[Bugfix] Add missing padding to section"

--- a/src/styles/6-components/_services.scss
+++ b/src/styles/6-components/_services.scss
@@ -7,6 +7,7 @@ $clr-section-line: $color-black;
 
 .c-services {
   background: $clr-bg;
+  padding-bottom: 30rem;
 }
 
 .c-services__content {
@@ -82,6 +83,7 @@ $clr-section-line: $color-black;
     align-self: start;
     justify-self: start;
     padding-bottom: 0;
+    padding-right: 5rem;
   }
 }
 
